sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value gatNombreValeurs
	var ecart = gatNombreValeurs;
                    ^